# mdi

./: CMakeLists.txt  bigint.c  bigint.h  bigint_add.c  bigint_alloc_add.c  bigint_alloc_mul.c  bigint_cmp.c  bigint_free.c  bigint_impl.h  bigint_mul.c  bigint_to_hex.c  common_bits.h  mdi.c  mdi.h  mdi_add.c  mdi_add_signed.c  mdi_bitwise.c  mdi_div.c  mdi_div1.c  mdi_impl.h  mdi_mul.c  mdi_sub.c
src/: CMakeLists.txt  bigint.h  bigint_alloc.c  bigint_alloc_copy.c  bigint_alloc_hex.c  bigint_alloc_hex_c.c  bigint_impl.h  bigint_resize.c  bigint_to_hex.c  mdi.h  mdi_div1.c  mdi_impl.h  mdi_sub.c
test/: CMakeLists.txt  mdi_add.c  mdi_sub.c  test_impl.h
